--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>prisem workshop<title>
+</head>
+<body>
+  <h1>Hello World</h1>
+  <footer>See you in Eindhoven</footer>
+</body>
+</html>
