initial import of theme

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>prisem workshop</title>
-</head>
-<body>
-  <h1>Hello World</h1>
-  <footer>See you in Eindhoven</footer>
-</body>
-</html>
+---
+layout: default
+---
+
+<h2>{{site.name}} ({{site.title}})</h2>
+
+<h3>News</h3>
+<ul>
+	<!-- <li>September 22, 2019: Significant updates to the <a href="program.html#program">program</a> because of
+		extreme weather!</li>
+	<li>August 27, 2019: Keynote by Zhi Jin: <a href="program.html#keynote">abstract and bio</a>.</li>
+ 	<li>July 29, 2019: The list of accepted papers is <a href="program.html#accepted">online</a>.</li>
+	<li>June 10, 2019: Workshop date confirmed: September 24 (Tuesday).</li>
+	<li>June 2, 2019: The program committee for AIRE 2019 has been finalized.</li>
+	<li>May 30, 2019: The call for papers has been updated, we are now accepting full papers and position
+		statements, experience reports, and demos. -->
+	<li>February 3, 2020: A first version of the website is online!</li>
+	</li>
+</ul>
+
+<!-- <h3>AIRE Overview</h3>
+<p>The purpose of this workshop is to explore synergies between Artificial Intelligence (AI) and
+	Requirements Engineering (RE) to improve requirements quality. AIRE aims to strengthen the links between
+	the community, including industry and academia. We welcome submissions in the intersection between RE
+	and AI. The topics of interest include but are not limited to:</p>
+<ul>
+	<li>RE quality models and their automation</li>
+	<li>Natural language processing and comprehension</li>
+	<li>Natural language semantics, understanding and generation</li>
+	<li>Machine learning techniques including supervised, unsupervised, and machine-human interactions</li>
+	<li>Artificial neural networks, deep learning</li>
+	<li>Detection of uncertainties and ambiguities</li>
+	<li>Logic-based reasoning techniques</li>
+	<li>Knowledge acquisition and representation</li>
+	<li>Agent based solutions</li>
+	<li>Problem solving and decision making support mechanisms </li>
+	<li>Optimization techniques</li>
+	<li>Automated approaches for prioritization</li>
+</ul> -->
