--- a/paper.html
+++ b/paper.html
@@ -2,74 +2,58 @@
 layout: default
 ---
 
-<h2>Preliminary call for papers</h2>
+<h2>Call for papers</h2>
 <!-- <p>Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
 	-->
 
-<p>Enterprise and business modeling (EM/BM) are mature disciplines with long histories. Traditionally enterprise models
-	were mostly aimed at information system design, but now they are often considered as a tool for coordinating
-	business transformation. At the same time, more and less formal approaches to modeling (such as business model
-	canvas, strategy maps) began to gain traction. Modeling became the basis for enterprise architecture and business
-	architecture management (EAM/BAM). EM/BM and EAM/BAM has a potential to enhance and improve existing management
-	practices, to add transparency and clarity to management decisions and to make organizations more aligned and
-	adaptive.</p>
-
-<p> In order to be useful and highly-demanded EM/BM and EAM/BAM must be seamlessly embedded into existing managerial
-	practices and demonstrate added value. It requires a dialog between industry and academia, between IT and business
-	people.
-	There are some academic conferences (e.g. POEM, TEAR, EOMAS, VMBO etc.) and industrial events (e.g. events organized
-	by Gartner, Business Architecture Guild, The Open Group etc.) in the area of EM/BM and EAM/BAM. Unfortunately there
-	is a lack of interaction and communication between academia and industry in this area, the dialog is limited. This
-	workshop is aimed to address this gap.</p>
-
-<p>This workshop will team together people from academia and practitioners in order to share knowledge, ideas and
-	lessons learned about the usage of EM/BM and EAM/BAM for business transformation (including digital transformation)
-	and managerial decision making. The workshop will help academics better understand how EM/BM and EAM/BAM models,
-	methods and tools are used in business practices and the challenges that practitioners are facing. On the other
-	hand, the workshop will bring practitioners up to speed on the latest research and allow them to incorporate new
-	ideas into their approaches.</p>
-
-
+<p>
+Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy have to become an integrated part of Enterprise Architecture.
+</p>
+<p>
+Emerging technologies such as distributed ledgers, privacy-enhancing technologies, and blockchains leverage powerful cryptography features, all-purpose Turing-complete programming languages and flexible communication models. They are considered as new transparency security and privacy enablers for distributed processing without requiring a trusted third-party. Today, their integration within information systems is a difficult task for enterprise architects due to the paradigm-shifting nature of those technologies and the lack of adequate models and tools from the enterprise modeling community. This paradigmatic shift can also be explained with privacy-enhancing technologies coming from a tradition of privacy as confidentiality. This area is under explored and yet to be understood.
+</p>
+<p>
+The goal of PriSEM’20 is to bring together researchers and practitioners to discuss theoretical and practical problems and solutions in a rapidly maturing domain of enterprise security and privacy. The integration of security and privacy aspects in enterprise models is a central theme of this workshop.
+</p> 
 
 <p>Two types of papers are possible:</p>
 <h4>Paper</h4>
-<p>Maximum length 6 pages (including references).</p>
-<h4>Slides-only</h4>
 <p>Only an abstract</p>
+<p>Two types of paper submissions are solicited: a) scientific research papers, and b) industry experience reports or case studies.</p>
+<p>
+Scientific research papers should describe original results not been accepted or submitted for publication elsewhere. These papers will be evaluated based on their scientific and technical contribution, originality, and relevance.
+</p>
+In turn, industry experience reports should provide new insights gained in case studies or when applying enterprise computing technology in practice; industry experience reports shall further provide important feedback about the state of practice and pose challenges for researchers. These papers will be evaluated based on their appropriateness, significance, and clarity. Industry experience reports must report an actual implementation in practice and must have at least one author with an industry affiliation.
 
-<p>Plus, workshop attendees may also opt to showcase their tools/prototypes during the coffee break. </p>
+
 <br>
 
 <h2>Formatting and Submission Guidelines</h2>
-<!-- <p>Submissions must be written in English and formatted according to the <a
-		href="http://re19.ajou.ac.kr/pages/submission/formatting_instructions/" target="_blank">IEEE formatting
-		instructions</a>. All submissions must be in PDF format.</p> -->
+<p>
+	Submissions should be full papers with 8-10 pages. All submissions must be made in PDF format and comply with the IEEE Computer Society Conference Proceedings Format Guidelines.
+</p>
+	
 
 <h2>Key Dates</h2>
-<!-- <table width="100%">
-	<tbody>
-		<tr>
-			<td><strong>Abstract Submission (optional)</strong></td>
-			<td>June 30, 2019</td>
-		</tr>
-		<tr>
-			<td><strong>Paper Submission</strong></td>
-			<td>July 05, 2019</td>
-		</tr>
-		<tr>
-			<td><strong>Paper Notification</strong></td>
-			<td>July 25, 2019</td>
-		</tr>
-		<tr>
-			<td><strong>Camera Ready Due</strong></td>
-			<td>August 08, 2019</td>
-		</tr>
-		<tr>
-			<td><strong>Workshop</strong></td>
-			<td>September 24, 2019</td>
-		</tr>
-	</tbody>
-</table> -->
-
+<table>
+	<tr>
+		<td>
+Workshop paper submission</td><td> 30 June 2020</td>
+</tr>
+<tr><td>
+Workshop papers acceptance notification</td> <td>22 July 2020</td>
+</tr>
+<tr>
+	<td>
+Workshop camera-ready papers due</td> <td>26 July 2020</td>
+</tr>
+<tr><td>
+Author registration</td> <td>26 July 2020</td>
+</tr>
+<tr>
+	<td>
+Workshops sessions</td> <td>5 October 2020</td>
+</tr>
+</table>
 <h2>Submit Here</h2>
 <!-- Submit via <a href="https://easychair.org/conferences/?conf=aire2019" target="_blank">EasyChair</a> -->
