--- a/paper.html
+++ b/paper.html
@@ -56,4 +56,4 @@ Workshops sessions</td> <td>5 October 2020</td>
 </tr>
 </table>
 <h2>Submit Here</h2>
-<!-- Submit via <a href="https://easychair.org/conferences/?conf=aire2019" target="_blank">EasyChair</a> -->
+Submit via <a href="https://easychair.org/conferences/?conf=prisem2020" target="_blank">EasyChair</a> -->
