--- a/paper.html
+++ b/paper.html
@@ -15,6 +15,25 @@ Emerging technologies such as distributed ledgers, privacy-enhancing technologie
 <p>
 The goal of PriSEM’20 is to bring together researchers and practitioners to discuss theoretical and practical problems and solutions in a rapidly maturing domain of enterprise security and privacy. The integration of security and privacy aspects in enterprise models is a central theme of this workshop.
 </p> 
+<h4>Topics</h4>
+<p>
+We strongly encourage the submissions reporting a synergy of innovative research and best practices in the area of organizational privacy and security management, modeling and architecture, etc.  </p>
+<p>The topics of interest include but are not limited to</p>
+<ul>
+<li>modeling and design for privacy-enhanced enterprise systems</li>
+<li>privacy and security by design</li>
+<li>privacy in software modeling</li>
+<li>privacy beyond compliance/privacy as confidentiality </li>
+<li>conceptualization and modeling of privacy-enhancing technologies in requirements engineering</li>
+<li>modeling for privacy-preserving ML and AI</li>
+<li>privacy & security management using emerging technologies </li>
+<li>privacy & security modeling for enterprise distributed ledger and blockchain solutions</li>
+<li>privacy & security modeling for enterprise smart contracts</li>
+<li>privacy & security modeling for enterprise IoT integration</li>
+<li>privacy & security modeling for Supply-chain</li>
+<li>practical aspects of privacy & security modeling in the organizations</li>
+<li>usability of privacy and security in the context of enterprise architecture</li>
+</ul>
 
 <p>Two types of papers are possible:</p>
 <h4>Paper</h4>
