--- a/organization.html
+++ b/organization.html
@@ -41,10 +41,10 @@ layout: default
 <dd><span class="name">Nicolas Herbaut</span>, University Paris 1, France </dd>
 <dd><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland </dd>
 <dd><span class="name">Irina Rychkova</span>, University Paris 1, France </dd>
-<dd><span class="name">Seda Gürses</span>, TU Delft/KU Leuven, Belgium </dd>
+<!-- <dd><span class="name">Seda Gürses</span>, TU Delft/KU Leuven, Belgium </dd> -->
 <dd><span class="name">Gil Regev</span>, EPFL, Switzerland </dd>
 <dd><span class="name">Alain Wegmann</span>, EPFL, Switzerland </dd>
-<dd><span class="name">Eran Toch</span>, Tel Aviv University, Israel </dd>
+<!-- <dd><span class="name">Eran Toch</span>, Tel Aviv University, Israel </dd> -->
 <dd><span class="name">Saïd Assar</span>, Institut Mines-Télécom Business School, France </dd>
 <dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, Neitherland </dd>
 
