--- a/paper.html
+++ b/paper.html
@@ -35,21 +35,21 @@ We strongly encourage the submissions reporting a synergy of innovative research
 <li>usability of privacy and security in the context of enterprise architecture</li>
 </ul>
 
-<p>Two types of papers are possible:</p>
-<h4>Paper</h4>
-<p>Two types of paper submissions are solicited: a) scientific research papers, and b) industry experience reports or case studies.</p>
-<p>
-Scientific research papers should describe original results not been accepted or submitted for publication elsewhere. These papers will be evaluated based on their scientific and technical contribution, originality, and relevance.
-</p>
-<p>
-In turn, industry experience reports should provide new insights gained in case studies or when applying enterprise computing technology in practice; industry experience reports shall further provide important feedback about the state of practice and pose challenges for researchers. These papers will be evaluated based on their appropriateness, significance, and clarity. Industry experience reports must report an actual implementation in practice and must have at least one author with an industry affiliation.
-</p>
+<h4>Paper Types</h4>
+<p>We solicit four types of contributions:</p>
+<ul>
+	<li>Technical papers should describe original results not been accepted or submitted for publication elsewhere. These papers will be evaluated based on their scientific and technical contribution, originality, and relevance.</li>
+	<li>Experience reports should provide new insights gained in case studies or when applying enterprise computing technology in practice; industry experience reports shall further provide important feedback about the state of practice and pose challenges for researchers. These papers will be evaluated based on their appropriateness, significance, and clarity. Industry experience reports must report an actual implementation in practice and must have at least one author with an industry affiliation.
+	<li>Successful failures and negative results papers should report experiences of an attempt to combine privacy and/or security in enterprise modeling with a less favorable outcome than expected. These papers should present an analysis of the situation about intentions vs reality and reflections in the format of lessons learnt and guidelines about what could be done to avoid repeating such cases.</li>
+	<li>Position papers should give a broad yet well-informed overview of the topic they focus on and build a vision and a research roadmap, or open questions for the community at any topic related to privacy, security, and enterprise modeling. These papers should show familiarity with related work and could be built on extensive literateure review but should offer the reflections of the authors about the research domain and not merely summarize prior research. These papers will be evaluated on their potential to spark debate during the workshop as well as how artitulate they highlight current and future challenges.	</li>
+<ul>
 
 <br>
 
 <h2>Formatting and Submission Guidelines</h2>
 <p>
-	Submissions should be full papers with 8-10 pages. All submissions must be made in PDF format and comply with the IEEE Computer Society Conference Proceedings Format Guidelines.
+	
+<p>We welcome full and short papers. Full-paper submissions should be 8-10 pages. Short-paper submissions should be 4-6 pages. All submissions must be made in PDF format and comply with the IEEE Computer Society Conference Proceedings Format Guidelines.
 </p>
 	
 
