--- a/paper.html
+++ b/paper.html
@@ -17,7 +17,8 @@ The goal of PriSEM’20 is to bring together researchers and practitioners to di
 </p> 
 <h4>Topics</h4>
 <p>
-We strongly encourage the submissions reporting a synergy of innovative research and best practices in the area of organizational privacy and security management, modeling and architecture, etc.  </p>
+We strongly encourage the submissions reporting a synergy of innovative research and best practices in the area of organizational privacy and security management, modeling and architecture, etc.  
+</p>
 <p>The topics of interest include but are not limited to</p>
 <ul>
 <li>modeling and design for privacy-enhanced enterprise systems</li>
@@ -42,7 +43,7 @@ We strongly encourage the submissions reporting a synergy of innovative research
 	<li>Experience reports should provide new insights gained in case studies or when applying enterprise computing technology in practice; industry experience reports shall further provide important feedback about the state of practice and pose challenges for researchers. These papers will be evaluated based on their appropriateness, significance, and clarity. Industry experience reports must report an actual implementation in practice and must have at least one author with an industry affiliation.
 	<li>Successful failures and negative results papers should report experiences of an attempt to combine privacy and/or security in enterprise modeling with a less favorable outcome than expected. These papers should present an analysis of the situation about intentions vs reality and reflections in the format of lessons learnt and guidelines about what could be done to avoid repeating such cases.</li>
 	<li>Position papers should give a broad yet well-informed overview of the topic they focus on and build a vision and a research roadmap, or open questions for the community at any topic related to privacy, security, and enterprise modeling. These papers should show familiarity with related work and could be built on extensive literateure review but should offer the reflections of the authors about the research domain and not merely summarize prior research. These papers will be evaluated on their potential to spark debate during the workshop as well as how artitulate they highlight current and future challenges.	</li>
-<ul>
+</ul>
 
 <br>
 
