--- a/paper.html
+++ b/paper.html
@@ -53,6 +53,11 @@ We strongly encourage the submissions reporting a synergy of innovative research
 <p>We welcome full and short papers. Full-paper submissions should be 8-10 pages. Short-paper submissions should be 4-6 pages. All submissions must be made in PDF format and comply with the IEEE Computer Society Conference Proceedings Format Guidelines.
 </p>
 	
+<h2>Proceedings</h2>
+
+<p>Accepted papers will be published in an IEEE companion proceedings for all workshops.</p>
+
+
 
 <h2>Key Dates</h2>
 <table>
