--- a/organization.html
+++ b/organization.html
@@ -46,6 +46,7 @@ layout: default
 <dd><span class="name">Alain Wegmann</span>, EPFL, Switzerland </dd>
 <!-- <dd><span class="name">Eran Toch</span>, Tel Aviv University, Israel </dd> -->
 <dd><span class="name">Saïd Assar</span>, Institut Mines-Télécom Business School, France </dd>
-<dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, Neitherland </dd>
+<dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, the Netherlands </dd>
+<dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
 
 
