update home page

--- a/index.html
+++ b/index.html
@@ -6,34 +6,36 @@ layout: default
 
 <h3>News</h3>
 <ul>
-	<!-- <li>September 22, 2019: Significant updates to the <a href="program.html#program">program</a> because of
-		extreme weather!</li>
-	<li>August 27, 2019: Keynote by Zhi Jin: <a href="program.html#keynote">abstract and bio</a>.</li>
- 	<li>July 29, 2019: The list of accepted papers is <a href="program.html#accepted">online</a>.</li>
-	<li>June 10, 2019: Workshop date confirmed: September 24 (Tuesday).</li>
-	<li>June 2, 2019: The program committee for AIRE 2019 has been finalized.</li>
-	<li>May 30, 2019: The call for papers has been updated, we are now accepting full papers and position
-		statements, experience reports, and demos. -->
-	<li>February 3, 2020: A first version of the website is online!</li>
+	<li>Mar 16, 2020: A first version of the website is online!</li>
 	</li>
 </ul>
 
-<!-- <h3>AIRE Overview</h3>
-<p>The purpose of this workshop is to explore synergies between Artificial Intelligence (AI) and
-	Requirements Engineering (RE) to improve requirements quality. AIRE aims to strengthen the links between
-	the community, including industry and academia. We welcome submissions in the intersection between RE
-	and AI. The topics of interest include but are not limited to:</p>
+<h3>PriSEM Overview</h3>
+<p>
+Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy have to become an integrated part of Enterprise Architecture.
+</p>
+<p>
+Emerging technologies such as distributed ledgers, privacy-enhancing technologies, and blockchains leverage powerful cryptography features, all-purpose Turing-complete programming languages and flexible communication models. They are considered as new transparency security and privacy enablers for distributed processing without requiring a trusted third-party. Today, their integration within information systems is a difficult task for enterprise architects due to the paradigm-shifting nature of those technologies and the lack of adequate models and tools from the enterprise modeling community. This paradigmatic shift can also be explained with privacy-enhancing technologies coming from a tradition of privacy as confidentiality. This area is under explored and yet to be understood.
+</p>
+<p>
+The goal of PriSEM’20 is to bring together researchers and practitioners to discuss theoretical and practical problems and solutions in a rapidly maturing domain of enterprise security and privacy. The integration of security and privacy aspects in enterprise models is a central theme of this workshop.
+</p> 
+<p>
+We strongly encourage the submissions reporting a synergy of innovative research and best practices in the area of organizational privacy and security management, modeling and architecture, etc.  
+</p>
+<p>The topics of interest include but are not limited to</p>
 <ul>
-	<li>RE quality models and their automation</li>
-	<li>Natural language processing and comprehension</li>
-	<li>Natural language semantics, understanding and generation</li>
-	<li>Machine learning techniques including supervised, unsupervised, and machine-human interactions</li>
-	<li>Artificial neural networks, deep learning</li>
-	<li>Detection of uncertainties and ambiguities</li>
-	<li>Logic-based reasoning techniques</li>
-	<li>Knowledge acquisition and representation</li>
-	<li>Agent based solutions</li>
-	<li>Problem solving and decision making support mechanisms </li>
-	<li>Optimization techniques</li>
-	<li>Automated approaches for prioritization</li>
-</ul> -->
+<li>Modeling and design for privacy-enhanced enterprise systems</li>
+<li>Privacy and security by design</li>
+<li>Privacy in software modeling</li>
+<li>Privacy beyond compliance/privacy as confidentiality </li>
+<li>Conceptualization and modeling of privacy-enhancing technologies in requirements engineering</li>
+<li>Modeling for privacy-preserving ML and AI</li>
+<li>Privacy & security management using emerging technologies </li>
+<li>Privacy & security modeling for enterprise distributed ledger and blockchain solutions</li>
+<li>Privacy & security modeling for enterprise smart contracts</li>
+<li>Privacy & security modeling for enterprise IoT integration</li>
+<li>Privacy & security modeling for Supply-chain</li>
+<li>Practical aspects of privacy & security modeling in the organizations</li>
+<li>Usability of privacy and security in the context of enterprise architecture</li>
+</ul>
