--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@ layout: default
 </ul>
 
 <h3>PriSEM Overview</h3>
-<p>
-Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy have to become an integrated part of Enterprise Architecture.
-</p>
-<p>
-Emerging technologies such as distributed ledgers, privacy-enhancing technologies, and blockchains leverage powerful cryptography features, all-purpose Turing-complete programming languages and flexible communication models. They are considered as new transparency security and privacy enablers for distributed processing without requiring a trusted third-party. Today, their integration within information systems is a difficult task for enterprise architects due to the paradigm-shifting nature of those technologies and the lack of adequate models and tools from the enterprise modeling community. This paradigmatic shift can also be explained with privacy-enhancing technologies coming from a tradition of privacy as confidentiality. This area is under explored and yet to be understood.
-</p>
+
 <p>
 The goal of PriSEM’20 is to bring together researchers and practitioners to discuss theoretical and practical problems and solutions in a rapidly maturing domain of enterprise security and privacy. The integration of security and privacy aspects in enterprise models is a central theme of this workshop.
 </p> 
@@ -25,17 +20,22 @@ We strongly encourage the submissions reporting a synergy of innovative research
 </p>
 <p>The topics of interest include but are not limited to</p>
 <ul>
-<li>Modeling and design for privacy-enhanced enterprise systems</li>
-<li>Privacy and security by design</li>
-<li>Privacy in software modeling</li>
-<li>Privacy beyond compliance/privacy as confidentiality </li>
-<li>Conceptualization and modeling of privacy-enhancing technologies in requirements engineering</li>
-<li>Modeling for privacy-preserving ML and AI</li>
-<li>Privacy & security management using emerging technologies </li>
-<li>Privacy & security modeling for enterprise distributed ledger and blockchain solutions</li>
-<li>Privacy & security modeling for enterprise smart contracts</li>
-<li>Privacy & security modeling for enterprise IoT integration</li>
-<li>Privacy & security modeling for Supply-chain</li>
-<li>Practical aspects of privacy & security modeling in the organizations</li>
-<li>Usability of privacy and security in the context of enterprise architecture</li>
+	<li>Modeling for design and analysis of privacy-enhanced and/or security enterprise systems</li>
+	<li>Privacy/security by design</li>
+	<li>Privacy/security modeling for software design</li>
+	<li>Modeling for privacy/security compliance </li>
+	<li>Privacy beyond compliance/privacy as confidentiality in enterprises</li>
+	<li>Data protection mechanisms and implementation in enterprises</li>
+	<li>Conceptualization and modeling of privacy-enhancing technologies (PETs) in requirements engineering, enterprise modeling, and IS </li>
+	<li>Modeling for privacy-preserving ML and AI</li>
+	<li>Privacy/security management using emerging technologies </li>
+	<li>Privacy/security modeling for enterprise distributed ledger and blockchain solutions</li>
+	<li>Privacy/security modeling for enterprise smart contracts</li>
+	<li>Privacy/security modeling for enterprise IoT integration</li>
+	<li>Privacy/security modeling for supply-chain</li>
+	<li>Practical aspects of privacy & security modeling in the organizations</li>
+	<li>Privacy/security in business process modeling</li>
+	<li>Usability of privacy and security in the context of enterprise architecture</li>
+	<li>Privacy/security enterprise methods and methodologies</li>
+
 </ul>
