--- a/paper.html
+++ b/paper.html
@@ -21,19 +21,23 @@ We strongly encourage the submissions reporting a synergy of innovative research
 </p>
 <p>The topics of interest include but are not limited to</p>
 <ul>
-<li>modeling and design for privacy-enhanced enterprise systems</li>
-<li>privacy and security by design</li>
-<li>privacy in software modeling</li>
-<li>privacy beyond compliance/privacy as confidentiality </li>
-<li>conceptualization and modeling of privacy-enhancing technologies in requirements engineering</li>
-<li>modeling for privacy-preserving ML and AI</li>
-<li>privacy & security management using emerging technologies </li>
-<li>privacy & security modeling for enterprise distributed ledger and blockchain solutions</li>
-<li>privacy & security modeling for enterprise smart contracts</li>
-<li>privacy & security modeling for enterprise IoT integration</li>
-<li>privacy & security modeling for Supply-chain</li>
-<li>practical aspects of privacy & security modeling in the organizations</li>
-<li>usability of privacy and security in the context of enterprise architecture</li>
+<li>Modeling for design and analysis of privacy-enhanced and/or security enterprise systems</li>
+	<li>Privacy/security by design</li>
+	<li>Privacy/security modeling for software design</li>
+	<li>Modeling for privacy/security compliance </li>
+	<li>Privacy beyond compliance/privacy as confidentiality in enterprises</li>
+	<li>Data protection mechanisms and implementation in enterprises</li>
+	<li>Conceptualization and modeling of privacy-enhancing technologies (PETs) in requirements engineering, enterprise modeling, and IS </li>
+	<li>Modeling for privacy-preserving ML and AI</li>
+	<li>Privacy/security management using emerging technologies </li>
+	<li>Privacy/security modeling for enterprise distributed ledger and blockchain solutions</li>
+	<li>Privacy/security modeling for enterprise smart contracts</li>
+	<li>Privacy/security modeling for enterprise IoT integration</li>
+	<li>Privacy/security modeling for supply-chain</li>
+	<li>Practical aspects of privacy & security modeling in the organizations</li>
+	<li>Privacy/security in business process modeling</li>
+	<li>Usability of privacy and security in the context of enterprise architecture</li>
+	<li>Privacy/security enterprise methods and methodologies</li>
 </ul>
 
 <h4>Paper Types</h4>
