--- a/organization.html
+++ b/organization.html
@@ -48,5 +48,7 @@ layout: default
 <dd><span class="name">Saïd Assar</span>, Institut Mines-Télécom Business School, France </dd>
 <dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, the Netherlands </dd>
 <dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
+<dd><span class="name">Christos Kalloniatis</span>, University of Aegean, Greece </dd>
+		
 
 
