--- a/organization.html
+++ b/organization.html
@@ -9,7 +9,7 @@ layout: default
 		<div id="board1" class="content">
 			<div class="row">
 				<div class="large-4 medium-4 columns">
-					<!-- <img src="img/jaspreet.jpg" width="100%" /> -->
+					<!-- <img src="img/nicolas.jpg" width="100%" /> -->
 				</div>
 				<div class="large-8 medium-8 columns">
 					Nicolas Herbaut is an associate professor at Université Paris 1 Panthéon Sorbonne. His research interests are in the domain of Network Softwarization, Blockchain and Software Engineering. Before earning his PhD from Bordeaux University in 2017, he worked for 10 years in the software industry in startups and large groups. He participated in several European and National collaborative research projects, and coordinated the creation of the IEEE Blockchain Initiative local group in France. He publishes in venues such as IEEE Globecom, ICC, Communication Magazine and Multimedia Magazine.
@@ -19,11 +19,11 @@ layout: default
 	</dd>
 
 	<dd>
-		<a href="#board2"><span class="name">Blagovesta Kostova</span>,  Laboratory of Systemic Modeling (LAMS), EPFL, Switzerland</a>
+		<a href="#board2"><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland</a>
 		<div id="board2" class="content">
 			<div class="row">
 				<div class="large-4 medium-4 columns">
-					<!-- <img src="img/pradeep.png" width="100%" /> -->
+					<!-- <img src="img/betty.png" width="100%" /> -->
 				</div>
 				<div class="large-8 medium-8 columns">
 					Blagovesta Kostova is a fourth-year PhD student at EPFL under the supervision of Professor Alain Wegmann. Her research interests are in the domain of engineering of complex service-oriented systems, and in particular in the field of privacy engineering. In her research, she works on the conceptualization, design, and implementation of methods and tools for modeling the intersection between enterprise and IT systems. Blagovesta interned at Microsoft Research and AI, working on software engineering tools for using homomorphic encryption without expert knowledge. Before her doctoral studies, she had 5 years of industry experience in developing CRM and ERP systems, as well as in an EPFL startup focused on searchable encryption and multiparty computation.
