--- a/organization.html
+++ b/organization.html
@@ -26,7 +26,7 @@ layout: default
 					<!-- <img src="img/betty.png" width="100%" /> -->
 				</div>
 				<div class="large-8 medium-8 columns">
-					Blagovesta Kostova is a fourth-year PhD student at EPFL under the supervision of Professor Alain Wegmann. Her research interests are in the domain of engineering of complex service-oriented systems, and in particular in the field of privacy engineering. In her research, she works on the conceptualization, design, and implementation of methods and tools for modeling the intersection between enterprise and IT systems. Blagovesta interned at Microsoft Research and AI, working on software engineering tools for using homomorphic encryption without expert knowledge. Before her doctoral studies, she had 5 years of industry experience in developing CRM and ERP systems, as well as in an EPFL startup focused on searchable encryption and multiparty computation.
+					Blagovesta Kostova is a fourth-year PhD student at EPFL under the supervision of Professor Alain Wegmann. Her main research topic is privacy engineering of service-oriented systems. In her research, she works on the conceptualization, design, and implementation of methods and tools for modeling the intersection between enterprise and IT systems. Blagovesta interned at Microsoft Research and AI, working on software engineering tools for using homomorphic encryption without expert knowledge. Before her doctoral studies, she had 5 years of industry experience in developing CRM and ERP systems, as well as in an EPFL startup focused on searchable encryption and multiparty computation.
 
 				</div>
 			</div>
