--- a/organization.html
+++ b/organization.html
@@ -49,6 +49,7 @@ layout: default
 <dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, the Netherlands </dd>
 <dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
 <dd><span class="name">Christos Kalloniatis</span>, University of Aegean, Greece </dd>
+<dd><span class="name">Dominik Huth</span>, Technische Universität München, Germany </dd>
 		
 
 
