--- a/paper.html
+++ b/paper.html
@@ -54,7 +54,7 @@ We strongly encourage the submissions reporting a synergy of innovative research
 <h2>Formatting and Submission Guidelines</h2>
 <p>
 	
-<p>We welcome full and short papers. Full-paper submissions should be 8-10 pages. Short-paper submissions should be 4-6 pages. All submissions must be made in PDF format and comply with the IEEE Computer Society Conference Proceedings Format Guidelines.
+<p>We welcome full and short papers. Full-paper submissions should be 8-10 pages. Short-paper submissions should be 4-6 pages. All submissions must be made in PDF format and comply with the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Computer Society Conference Proceedings Format Guidelines.</a>
 </p>
 	
 <h2>Proceedings</h2>
