--- a/organization.html
+++ b/organization.html
@@ -35,7 +35,7 @@ layout: default
 	
 </dl>
 
-<h2>Program Committee tentative</h2>
+<h2>Program Committee</h2>
 
 <dl class="accordion-like-list" data-accordion>
 <dd><span class="name">Nicolas Herbaut</span>, University Paris 1, France </dd>
