print style easychair link fix

--- a/paper.html
+++ b/paper.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<h1 class="print-only">First International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'20)</h1>
 <h2>Call for papers</h2>
 <!-- <p>Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
 	-->
@@ -85,4 +85,4 @@ Workshops sessions</td> <td>5 October 2020</td>
 </tr>
 </table>
 <h2>Submit Here</h2>
-Submit via <a href="https://easychair.org/conferences/?conf=prisem2020" target="_blank">EasyChair</a> -->
+Submit via <a href="https://easychair.org/conferences/?conf=prisem20" target="_blank">EasyChair</a>
