added in conjunction

--- a/paper.html
+++ b/paper.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h1 class="print-only">First International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'20)</h1>
+<p class="print-only"> in conjonction with IEEE EDOC 2020</p>
 <h2>Call for papers</h2>
 <!-- <p>Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
 	-->
