--- a/paper.html
+++ b/paper.html
@@ -4,8 +4,8 @@ layout: default
 <h1 class="print-only">First International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'20)</h1>
 <p class="print-only"> in conjonction with IEEE EDOC 2020</p>
 <h2>Call for papers</h2>
-<!-- <p>Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
-	-->
+ <p class="no-print">Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
+	
 
 <p>
 Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy have to become an integrated part of Enterprise Architecture.
