--- a/organization.html
+++ b/organization.html
@@ -50,6 +50,9 @@ layout: default
 <dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
 <dd><span class="name">Christos Kalloniatis</span>, University of Aegean, Greece </dd>
 <dd><span class="name">Dominik Huth</span>, Technische Universität München, Germany </dd>
+<dd><span class="name">Jelena Zdravkovic</span>, TDSV, University of  Stockholm, Sweden </dd>
+
+		
 		
 
 
