--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ layout: default
 
 <h3>News</h3>
 <ul>
+	<li>May 5, 2020: Updated dates! submission deadline is 16 August 2020 </li>
+	</li>
 	<li>Mar 16, 2020: A first version of the website is online!</li>
 	</li>
 </ul>
