add a PC member

--- a/organization.html
+++ b/organization.html
@@ -41,16 +41,16 @@ layout: default
 <dd><span class="name">Nicolas Herbaut</span>, University Paris 1, France </dd>
 <dd><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland </dd>
 <dd><span class="name">Irina Rychkova</span>, University Paris 1, France </dd>
-<!-- <dd><span class="name">Seda Gürses</span>, TU Delft/KU Leuven, Belgium </dd> -->
 <dd><span class="name">Gil Regev</span>, EPFL, Switzerland </dd>
 <dd><span class="name">Alain Wegmann</span>, EPFL, Switzerland </dd>
-<!-- <dd><span class="name">Eran Toch</span>, Tel Aviv University, Israel </dd> -->
 <dd><span class="name">Saïd Assar</span>, Institut Mines-Télécom Business School, France </dd>
 <dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, the Netherlands </dd>
 <dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
 <dd><span class="name">Christos Kalloniatis</span>, University of Aegean, Greece </dd>
 <dd><span class="name">Dominik Huth</span>, Technische Universität München, Germany </dd>
-<dd><span class="name">Jelena Zdravkovic</span>, TDSV, University of  Stockholm, Sweden </dd>
+<dd><span class="name">Jelena Zdravkovic</span>, TDSV, University of  Stockholm, Sweden </dd>	
+<dd><span class="name">Kim Wuyts</span>, Katholieke Universiteit, Leuven, Belgium </dd>
+	
 
 		
 		
