--- a/paper.html
+++ b/paper.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<h1 class="print-only">First International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'20)</h1>
-<p class="print-only"> in conjonction with IEEE EDOC 2020</p>
+<h1 class="print-only">Second International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'21)</h1>
+<p class="print-only"> in conjonction with IEEE EDOC 2021</p>
 <h2>Call for papers</h2>
  <p class="no-print">Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
- <p class="print-only"> Visit PriSEM20  website https://prisem-ws.github.io </p>	
+ <p class="print-only"> Visit PriSEM21  website https://prisem-ws.github.io </p>	
 
 <p>
 Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy have to become an integrated part of Enterprise Architecture.
@@ -68,24 +68,24 @@ We strongly encourage the submissions reporting a synergy of innovative research
 <table>
 	<tr>
 		<td>
-Workshop paper submission</td><td> 16 August 2020</td>
+Workshop paper submission</td><td> 18 June 2021</td>
 </tr>
 <tr><td>
-Workshop papers acceptance notification</td> <td>6 September 2020</td>
+Workshop papers acceptance notification</td> <td>16 July 2021</td>
 </tr>
 <tr>
 	<td>
-Workshop camera-ready papers due</td> <td>13 September 2020</td>
+Workshop camera-ready papers due</td> <td>30 July 2021</td>
 </tr>
 <tr><td>
-Author registration</td> <td>13 September 2020</td>
+Author registration</td> <td> 30 July 2021</td>
 </tr>
 <tr>
 	<td>
-Workshops sessions</td> <td>5 October 2020</td>
+Workshops sessions</td> <td>25 October 2021</td>
 </tr>
 </table>
 
 <h2>Submit Here</h2>
 <p class="print-only">Checkout our website know more about PriSEM: 	https://prisem-ws.github.io</p>
-<p>Submit via <a href="https://easychair.org/conferences/?conf=prisem20" target="_blank">EasyChair</a></p>
+<p>Submit via <a href="https://easychair.org/conferences/?conf=prisem21" target="_blank">EasyChair</a></p>
