--- a/organization.html
+++ b/organization.html
@@ -3,7 +3,25 @@ layout: default
 ---
 <h2>Organizing Committee</h2>
 <dl class="accordion" data-accordion>
+	
+		<dd>
+		<a href="#board2"><span class="name">Irina Rychkov</span>, Centre de Recherche en Informatique (CRI), University Paris 1 Panthéon-Sorbonne, France</a>
+		<div id="board2" class="content">
+			<div class="row">
+				<div class="large-4 medium-4 columns">
+					<!-- <img src="img/betty.png" width="100%" /> -->
+				</div>
+				<div class="large-8 medium-8 columns">
+					TBD
+
+				</div>
+			</div>
+		</div>
+	</dd>
+	
+	
 	<dd>
+		
 		<a href="#board1"><span class="name">Nicolas Herbaut</span>,  Centre de Recherche en Informatique (CRI), University Paris 1 Panthéon-Sorbonne, France
 		</a>
 		<div id="board1" class="content">
